--- a/Movielens_Extract.ipynb
+++ b/Movielens_Extract.ipynb
@@ -7063,7 +7063,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "8cbbed39",
+   "id": "22efffa3",
    "metadata": {},
    "outputs": [
     {
@@ -7539,7 +7539,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "89bcb4c7",
+   "id": "fab23d49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7558,7 +7558,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "8db6bc57",
+   "id": "8d27deb7",
    "metadata": {},
    "outputs": [
     {
@@ -7676,7 +7676,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "81df55a5",
+   "id": "c516186b",
    "metadata": {},
    "outputs": [
     {
@@ -7807,7 +7807,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "a7d7bbdc",
+   "id": "3d3f10db",
    "metadata": {},
    "outputs": [
     {
@@ -7881,7 +7881,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "52f44cc8",
+   "id": "6766a4f7",
    "metadata": {},
    "outputs": [
     {
@@ -7914,7 +7914,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "78e6a98a",
+   "id": "96a6737c",
    "metadata": {},
    "outputs": [
     {
@@ -7947,7 +7947,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "ac137f29",
+   "id": "9e719d9e",
    "metadata": {},
    "outputs": [
     {
@@ -7980,7 +7980,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "89087b84",
+   "id": "bede9473",
    "metadata": {},
    "outputs": [
     {
@@ -8013,7 +8013,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "324ba198",
+   "id": "147a3c0a",
    "metadata": {},
    "outputs": [
     {
@@ -8046,7 +8046,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "b8e0b8e5",
+   "id": "a3513a58",
    "metadata": {},
    "outputs": [
     {
@@ -8163,7 +8163,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "016e7d74",
+   "id": "cedb65e6",
    "metadata": {},
    "outputs": [
     {
@@ -8184,7 +8184,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "b5b1b93d",
+   "id": "5f0b1c62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8194,7 +8194,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "e6a5f64b",
+   "id": "cdcc99f8",
    "metadata": {},
    "outputs": [
     {
@@ -8657,7 +8657,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "98cd1bd9",
+   "id": "3004020b",
    "metadata": {},
    "outputs": [
     {
@@ -8710,7 +8710,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "bf0c45e3",
+   "id": "aed62ecf",
    "metadata": {},
    "outputs": [
     {
@@ -8742,7 +8742,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "7bd7045f",
+   "id": "7ca8f1f8",
    "metadata": {},
    "outputs": [
     {
@@ -8781,7 +8781,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "4cdd2181",
+   "id": "36a5e3c2",
    "metadata": {},
    "outputs": [
     {
@@ -8912,7 +8912,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "b3eae27f",
+   "id": "1cef22d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8922,7 +8922,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "6ee65ad6",
+   "id": "e3d60ce2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8936,7 +8936,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "1a44174a",
+   "id": "5ed6b23d",
    "metadata": {},
    "outputs": [
     {
@@ -9428,7 +9428,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "cb4a3c5c",
+   "id": "9c6ca574",
    "metadata": {},
    "outputs": [
     {
@@ -9451,7 +9451,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "360e814d",
+   "id": "e89fadb2",
    "metadata": {},
    "outputs": [
     {
@@ -9473,7 +9473,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "dcf4b360",
+   "id": "d148e46b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9488,7 +9488,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "fb7083f3",
+   "id": "1b3420a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9512,8 +9512,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 124,
+   "id": "8fbd2c32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#getting counts for each group\n",
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "c3c461fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rename userid column to count\n",
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "8a50b7b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "408f8e7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1ad0e224",
+   "id": "eb3a76db",
    "metadata": {},
    "outputs": [],
    "source": []
