finished challenge for module 8

--- a/ETL_create_database.ipynb.ipynb
+++ b/ETL_create_database.ipynb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
     "    start_time = time.time()\n",
     "    for data in pd.read_csv(f'{file_dir}/archive/ratings.csv', chunksize=1000000):\n",
     "        print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\n",
-    "        data.to_sql(name='ratings', con=engine, if_exists='replace')\n",
+    "        data.to_sql(name='ratings', con=engine, if_exists='append')\n",
     "        rows_imported += len(data)\n",
     "\n",
     "    # add elapsed time to final print out\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,16 +306,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing rows 0 to 1000000...Done. 24.77497410774231 total seconds elapsed\n",
-      "importing rows 1000000 to 2000000...Done. 50.40107822418213 total seconds elapsed\n",
-      "importing rows 2000000 to 3000000..."
+      "importing rows 0 to 1000000...Done. 24.949069261550903 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 49.60814356803894 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 74.26426553726196 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 98.63532543182373 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 123.26077508926392 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 147.46830582618713 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 172.37129092216492 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 196.5756824016571 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 220.94269323349 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 245.83239078521729 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 270.5002920627594 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 295.2020196914673 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 320.2128174304962 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 344.8178668022156 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 369.56062865257263 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 394.0246684551239 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 418.7448134422302 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 443.3319628238678 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 467.38810324668884 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 492.72972416877747 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 517.2704887390137 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 541.4665687084198 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 566.8413860797882 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 593.3582193851471 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 617.9643161296844 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 642.8560435771942 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done. 643.4743895530701 total seconds elapsed\n"
      ]
     }
    ],
